# slipstream

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  ci-check.sh
.github/workflows/: test.yaml
benches/: dot_product.rs  life.rs  simple.rs  sum.rs  track.rs  utils.rs
benchmarks/: Cargo.toml
benchmarks/benches/: dot_product.rs  life.rs  simple.rs  sum.rs  utils.rs
dev/bench/: data.js
examples/: dot_product.rs  matrix.rs  matrix_multiplication.rs
proptest-regressions/: sse.txt
src/: avx.rs  iterators.rs  lib.rs  mask.rs  polyfill.rs  sse.rs  types.rs  vector.rs
