[package]
name = "impatient"
version = "0.1.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
edition = "2018"
description = "SIMD library usable by the masses"
repository = "http://github.com/vorner/impatient"
readme = "README.md"
keywords = ["simd", "performance"]
categories = ["hardware-support"]
license = "Apache-2.0 OR MIT"

[features]
default = ["std"]
std = []

[dependencies]
generic-array = "~0.14"
typenum = "~1"

[dev-dependencies]
array-init = "~0.1"
proptest = "~0.9"
rand = "~0.7"
