[package]
name = "slipstream"
version = "0.1.1"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
edition = "2018"
description = "SIMD library usable by the masses"
repository = "http://github.com/vorner/splitstream"
readme = "README.md"
keywords = ["simd", "performance"]
categories = ["hardware-support"]
license = "Apache-2.0 OR MIT"
autobenches = false

[badges]
travis-ci = { repository = "vorner/arc-swap" }
maintenance = { status = "actively-developed" }

[workspace]
members = ["benchmarks"]

[dependencies]
generic-array = "~0.14"
typenum = "~1"

[dev-dependencies]
criterion = "~0.3"
multiversion = "~0.5"
proptest = "~0.9"
rand = "~0.7"

[profile.release]
debug = 2

[profile.test]
# Some tests are slow to run. Even slower than it takes to compile them properly.
opt-level = 1

[[bench]]
name = "track"
harness = false
